<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="@color/black_light"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="@dimen/margin_small">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    android:id="@+id/main_linear"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_old_password"
            android:textColor="@color/lightGray"
            android:textSize="@dimen/_12sdp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/parentEdOldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edOldPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:inputType="textPassword"
                android:padding="10dp"
                android:background="@drawable/textview_light_grey"
                android:maxLength="30"
                android:hint=""
                android:text="" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_new_password"
            android:textColor="@color/lightGray"
            android:textSize="@dimen/_12sdp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/parentEdNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edNewPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:inputType="textPassword"
                android:padding="10dp"
                android:background="@drawable/textview_light_grey"
                android:maxLength="30"
                android:hint=""
                android:text="" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/re_enter_password"
            android:textColor="@color/lightGray"
            android:textSize="@dimen/_12sdp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/parentEdConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:inputType="textPassword"
                android:padding="10dp"
                android:background="@drawable/textview_light_grey"
                android:maxLength="30"
                android:hint=""
                android:text="" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>



</LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/main_linear"
        android:background="@drawable/btn_bg_orange"
        android:textColor="@color/white"
        android:text="@string/change_password"
        />

</RelativeLayout>