<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.login.LoginFragment">



    <LinearLayout
        android:id="@+id/text_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edUserNamee"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_30sdp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edUserName"
                android:layout_width="match_parent"
                android:paddingStart="@dimen/_6sdp"
                android:layout_height="@dimen/_35sdp"
                android:drawableStart="@drawable/ic_person"
                android:background="@drawable/textview_light_grey"
                android:drawablePadding="@dimen/_10sdp"
                android:focusableInTouchMode="true"
                android:hint="Username"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:longClickable="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/edUserNamee"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/textview_light_grey"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="@dimen/_10sdp"
                android:focusableInTouchMode="true"
                android:hint="@string/password"
                android:importantForAutofill="yes"
                android:inputType="textPassword"
                android:longClickable="false"
                android:maxLength="15" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold"
        android:layout_below="@+id/text_linear"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
      />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/txtForgotPassword"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/btn_bg_orange"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp" />

</RelativeLayout>